sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/EmptyIfBody.sand
pub class EmptyIfBody {
    foo() {
        (
            if cond {
                
            } else {
                x
            }
        )
    }
}